dist_man1_MANS=

if BUILD_PALLADIUMD
  dist_man1_MANS+=palladiumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=palladium-qt.1
endif

if BUILD_PALLADIUM_CLI
  dist_man1_MANS+=palladium-cli.1
endif

if BUILD_PALLADIUM_TX
  dist_man1_MANS+=palladium-tx.1
endif

if ENABLE_WALLET
if BUILD_PALLADIUM_WALLET
  dist_man1_MANS+=palladium-wallet.1
endif
endif
